# keel-daemon

daemon/: Cargo.toml  README.md
daemon/packaging/: README.md
daemon/packaging/ci/: github-actions.yml
daemon/packaging/macos/: Info.plist  build-macos.sh
daemon/packaging/windows/: build-windows.ps1  keel-installer.nsi
daemon/src/: cdp.rs  http.rs  js.rs  main.rs  mcp.rs  tray.rs
daemon/tests/: TEST-RESULTS.md  run-tests.sh
