[package]
name = "keel-daemon"
version = "0.1.0"
edition = "2021"
description = "Keel's hands on the user's real browser — CDP client + local MCP server + companion bridge"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "net", "sync"] }
tower-http = { version = "0.7", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop-app (menubar / system tray) shell — optional so the plain CLI build
# stays dependency-light. Enabled by the packaging scripts with
# `--features tray`. Deliberately NOT Electron and NOT a webview: tray-icon +
# tao add a tray icon and a native event loop and nothing else.
tray-icon = { version = "0.19", optional = true }
tao = { version = "0.30", optional = true }

[features]
default = []
tray = ["dep:tray-icon", "dep:tao"]

[profile.release]
lto = true
strip = true
opt-level = "z"
